[package]
name = "human-time-macros"
version = "0.1.5"
edition = "2021"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/manlge/human-time-macros"
description = "This is a library for human readable elapsed time string"

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quote = "1"
syn = { version = "1.0.56", features = ["full"] }
