[package]
description = "This is a library for human readable elapsed time string"
edition = "2021"
license = "Apache-2.0"
name = "human-time-macros"
readme = "README.md"
repository = "https://github.com/manlge/human-time-macros"
version = "0.1.8"

[lib]
proc-macro = true

[dependencies]
quote = "1"
syn = {version = "1.0.56", features = ["full"]}
